--- a/css/style_inicio_sesion.css
+++ b/css/style_inicio_sesion.css
@@ -13,7 +13,7 @@
     text-align: center;
     margin: 0 auto;
     margin-top:  110px;
-    background: #BAD0EF;
+    background: rgba(53, 166, 160, 1);
     padding: 20px 50px;
 }
 
