--- a/css/style_admin_edit_client.css
+++ b/css/style_admin_edit_client.css
@@ -4,7 +4,7 @@
 }
 
 .contendor_busqueda{
-    margin-top: 110px;
+    margin-top: 100px;
     display: flex;
     justify-content: center;
 }
@@ -19,8 +19,8 @@
     ============================*/
 
 .contenedor_tabla{
-    margin-top: 150px;
-    margin-left: 5%;
+    margin-top: 100px;
+    margin-left: 20%;
 }
 
 .users_table2 {
@@ -31,6 +31,7 @@
     border-radius: 2px;
     text-align: center;
     font-family: 'Kanit', sans-serif;
+    width: 95%;
 }
 
 .btn-edit{
@@ -43,4 +44,8 @@
     align-items: center;
     width: 50px;
     height: 50px;
+}
+
+.img-edit{
+    max-width: 40px; /*Para que la imagen del perfil sea pequeña*/
 }
